cds+ij - improve CDS enable logs
GitOrigin-RevId: 83198ca3f584ac7bd76206de72bb026eb7e48c2d